Fix Foreign Key error

--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -54,7 +54,7 @@
            
               <%= link_to 'Editar', edit_function_user_project_path(function_user_project), class: 'blue_button' %>
           
-            <%= link_to 'Remover', function_user_project, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'red_button' %>
+            <%= link_to 'Remover', function_user_project, method: :delete, data: { confirm: 'Deseja realmente remover o(a) usuário(a) "'"#{function_user_project.user.name}"'" do projeto?' }, class: 'red_button' %>
           
           </td>
         </tr>
