--- a/app/views/projects/_modal_tasks.html.erb
+++ b/app/views/projects/_modal_tasks.html.erb
@@ -1,7 +1,7 @@
 <!-- MODAL TAREFA -->
 <div class="<%= us.id %>">
   <div class="header">
-     US-<%= us.project.initial%>-<%= us.id %> <%= us.title %>
+     US-<%= us.project.initial.upcase %>-<%= us.id %> <%= us.title %>
   </div>
 </div> 
 <!-- /MODAL TAREFA -->
