--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -54,7 +54,7 @@
 <% end %>
 
 
-TK-<%= current_project.initial %>-<%= @task.id %> <%= @task.title %></h2>
+TK-<%= current_project.initial.upcase %>-<%= @task.id %> <%= @task.title %></h2>
 <br />
 
 <p><strong>Data de criação</strong></p>
