--- a/app/views/user_story_notifier_mailer/send_update_user_story_email.html.erb
+++ b/app/views/user_story_notifier_mailer/send_update_user_story_email.html.erb
@@ -6,7 +6,7 @@
 
   <body>
     <h1>Olá!</h1>
-    <p>A user story US-<%= @user_story.project.initial %>-<%= @user_story.id %> <%= @user_story.title %> foi atualizada com sucesso no projeto <%= @user_story.project.name %>! </p>
+    <p>A user story US-<%= @user_story.project.initial.upcase %>-<%= @user_story.id %> <%= @user_story.title %> foi atualizada com sucesso no projeto <%= @user_story.project.name %>! </p>
     <p>Havendo dúvidas contate o administrador.</p>
     <br />
     <p>Equipe Agile Kronos.</p>
